# Keke-Teamwork

./: .gitattributes  .gitignore  AI开发文档.md  LICENSE  README.md  pyproject.toml  start.bat
.github/: pull_request_template.md
.github/workflows/: ci-fast.yml
backend/: __init__.py  agent.py  agent_store.py  config.py  context_builder.py  delegate_runner.py  main.py  model_resolver.py  orchestrator.py  prompt_builder.py  research_runner.py  session.py  title_service.py  types.py  ws_server.py
backend/assets/: __init__.py  wallpaper_presets.py  wallpapers.py
backend/llm/: __init__.py  client.py  providers.py
backend/safety/: __init__.py  command_risk.py  file_staging.py  path_guard.py  permission.py
backend/tools/: __init__.py  base.py  console.py  delegate.py  edit.py  find.py  grep.py  ls.py  read.py  write.py
docs/: ROADMAP.md  SESSION_AGENDA.md  architecture.md  changelog.md  conventions.md  orchestrator-parallel-design.md
docs/designs/: workflow-engine.md
docs/sprint/: backlog.md  current.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  SessionContext.tsx  constants.ts  index.css  theme.ts  types.ts  ws-client.ts
frontend/src/components/: AgentManager.tsx  AppearanceSettings.tsx  ApprovalDialog.tsx  ChatArea.tsx  DirectoryPicker.tsx  Toast.tsx  (+9 more)
tests/: test_agent_permissions.py  test_context_limit.py  test_core_modules.py  test_delegate_agent.py  test_multi_provider_config.py  test_orchestrator_parallel.py  test_project_context.py  test_safety.py  test_token_estimate.py  test_tool_categories.py
(+2 files in other folders)
