[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keke-teamwork"
version = "0.1.0"
description = "A self-developed teamwork coding agent"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
gemini = ["google-genai>=1.0.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-timeout>=2.0"]
all = ["anthropic>=0.40.0", "google-genai>=1.0.0"]

[tool.setuptools.packages.find]
include = ["backend*"]
